src/test/ui/parser/unclosed-delimiter-in-dep.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL |     Ok(Value {
   |              - this opening brace...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/unclosed_delim_mod.rs:8:41
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - unclosed delimiter
LL |     Ok(Value {
   |       - unclosed delimiter
...
LL |
   |                                         ^

error: this file contains an unclosed delimiter
  --> $DIR/unclosed_delim_mod.rs:8:41
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - unclosed delimiter
LL |     Ok(Value {
   |       - unclosed delimiter
...
LL |
   |                                         ^

error[E0308]: mismatched types
  --> $DIR/unclosed-delimiter-in-dep.rs:4:20
   |
LL |     let _: usize = unclosed_delim_mod::new();
   |            -----   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found enum `Result`
   |            |
   |            expected due to this
   |
   = note: expected type `usize`
              found enum `Result<Value, ()>`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
